# GameInsights

./: .gitignore  README.md  pyproject.toml
.github/workflows/: api-ci.yml  bot-ci.yml  ci.yml  deploy-api.yml  deploy-bot.yml  lib-ci.yml  lib-release.yml  release.yml
api/: .gitignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 23784fcc8e7d_create_game_cache_table.py
api/app/: __init__.py  cache.py  collector_pool.py  config.py  constants.py  database.py  db_cache.py  dependencies.py  exceptions.py  game_search.py  main.py  models.py  schema.sql
api/app/routers/: __init__.py  games.py  health.py  users.py
api/app/schemas/: __init__.py  errors.py  games.py  health.py  users.py
api/tests/: conftest.py  test_db_cache.py  test_games.py  test_health.py  test_search.py
bot/: .gitignore  Dockerfile  fly.toml  pyproject.toml
bot/app/: __init__.py  api_client.py  bot.py  config.py  constants.py  main.py
bot/app/cogs/: __init__.py  games.py  reviews.py  users.py  utils.py
bot/app/embeds/: __init__.py  error_embed.py  game_embed.py
bot/app/utils/: __init__.py  formatting.py
bot/tests/: conftest.py  test_config.py  test_embeds.py  test_game_cog.py
gameinsights/: __init__.py  async_collector.py  cli.py  collector.py  exceptions.py
gameinsights/async_/: __init__.py  base.py  gamalytic.py  howlongtobeat.py  steamachievements.py  steamreview.py  steamstore.py  steamuser.py
gameinsights/model/: game_data.py
gameinsights/sources/: __init__.py  base.py  gamalytic.py  howlongtobeat.py  protondb.py  steamachievements.py  steamcharts.py  steamreview.py  steamspy.py  steamstore.py  steamuser.py
gameinsights/utils/: __init__.py  async_ratelimit.py  import_optional.py
lib/: pyproject.toml
lib/gameinsights/: __init__.py  _collector_utils.py  _types.py  async_collector.py  cli.py  collector.py  exceptions.py
lib/gameinsights/async_/: __init__.py  base.py  howlongtobeat.py  protondb.py  steamachievements.py  steamcharts.py  steamreview.py  steamspy.py  steamstore.py  steamuser.py
lib/gameinsights/model/: game_data.py  types.py
lib/gameinsights/sources/: __init__.py  _helpers.py  _parsers.py  _schemas.py  base.py  howlongtobeat.py  protondb.py  steamachievements.py  steamcharts.py  steamreview.py  steamspy.py  steamstore.py  steamuser.py
lib/gameinsights/utils/: ratelimit.py
lib/tests/: conftest.py  test_cli.py  test_collector_pandas_optional.py  test_exceptions.py
lib/tests/async_/: conftest.py  test_async_howlongtobeat.py  test_async_multicall_sources.py  test_async_simple_sources.py
lib/tests/collector/: test_dataframe.py  test_error_classification.py  test_error_handling.py  test_fetching.py  test_metrics.py  test_multi_appid.py  test_properties.py  test_user_data.py
lib/tests/fixtures/: cli_fixtures.py  common_fixtures.py  hltb_fixtures.py  steamreview_fixtures.py  steamspy_fixtures.py  steamstore_fixtures.py  steamuser_fixtures.py
lib/tests/model/: test_game_data.py  test_model_exceptions.py
lib/tests/sources/: test_base.py  test_base_error_handling.py  test_gamalytic.py  test_howlongtobeat.py  test_protondb.py  test_steamachievements.py  test_steamreview.py  test_steamspy.py  test_steamstore.py
notebooks/: integration_tests.ipynb
tests/: conftest.py  test_cli.py  test_cli_pandas_optional.py  test_collector.py  test_collector_pandas_optional.py  test_exceptions.py
tests/async_/: conftest.py  test_async_base.py  test_async_collector.py  test_async_howlongtobeat.py  test_async_multicall_sources.py  test_async_simple_sources.py
web/: .env.example  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  (+1 more)
(+47 files in other folders)
