[project]
name = "gameinsights"
version = "0.1.0"
description = "A unified tool for collecting Steam game data from multiple sources"
authors = [{ name = "nazhifkojaz", email = "nazhifkojaz@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["steam", "gaming", "data-analysis", "web-scraping"]
dependencies = [
    "requests>=2.0",
    "beautifulsoup4>=4.0",
    "fake-useragent>=2.2.0",
    "ratelimit>=2.2.1",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
dataframe = ["pandas>=2.2"]
async = ["aiohttp>=3.9", "aiolimiter>=1.1"]

[project.scripts]
gameinsights = "gameinsights.cli:main"

[project.urls]
Homepage = "https://github.com/nazhifkojaz/gameinsights"
Repository = "https://github.com/nazhifkojaz/gameinsights"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "mypy>=1.16.0",
    "black>=25.1.0",
    "types-requests>=2.32",
    "commitizen>=4.8.3",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.24",
    "pandas-stubs>=2.2.2",
    "types-beautifulsoup4>=4.12",
    "aiohttp>=3.9",
    "aiolimiter>=1.1",
]
notebooks = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gameinsights"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["gameinsights"]
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["gameinsights"]

[tool.black]
line-length = 99
target-version = ["py310"]
skip-string-normalization = true
preview = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["requests.*", "bs4.*", "fake_useragent.*", "ratelimit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiohttp.*", "aiolimiter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
